[gd_scene load_steps=9 format=3 uid="uid://bd3faxqyinlau"]

[ext_resource type="Script" path="res://scripts/cursor.gd" id="1_vgvst"]
[ext_resource type="Texture2D" uid="uid://1qd0qk5bex1s" path="res://textures/hand sprite.png" id="2_qwely"]
[ext_resource type="AudioStream" uid="uid://dacben2a836qg" path="res://sounds/fragment.wav" id="3_gccl6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ot6uy"]
radius = 143.003

[sub_resource type="CircleShape2D" id="CircleShape2D_ln3cf"]
radius = 83.006

[sub_resource type="Animation" id="Animation_svc6r"]
length = 0.001

[sub_resource type="Animation" id="Animation_hxmra"]
resource_name = "punch"
length = 0.1333

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ywe1v"]
_data = {
"RESET": SubResource("Animation_svc6r"),
"punch": SubResource("Animation_hxmra")
}

[node name="CURSOR" type="Node2D" groups=["cursor"]]
process_mode = 3
script = ExtResource("1_vgvst")

[node name="hand1" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.772549)
light_mask = 256
visibility_layer = 256
z_index = 11
position = Vector2(-18, 204.985)
scale = Vector2(0.711111, 0.711111)
texture = ExtResource("2_qwely")
hframes = 3
frame = 1

[node name="grab" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="grab"]
position = Vector2(0, -47)
shape = SubResource("CircleShape2D_ot6uy")

[node name="punch" type="Area2D" parent="."]
position = Vector2(-9.615, 1.19)
scale = Vector2(0.06, 0.06)

[node name="CollisionShape2D" type="CollisionShape2D" parent="punch"]
position = Vector2(0, -47)
scale = Vector2(0.47, 0.47)
shape = SubResource("CircleShape2D_ot6uy")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-8, -20)
shape = SubResource("CircleShape2D_ln3cf")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ywe1v")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_gccl6")

[connection signal="area_entered" from="grab" to="." method="_on_grab_area_entered"]
[connection signal="area_entered" from="punch" to="." method="_on_punch_area_entered"]
[connection signal="area_exited" from="punch" to="." method="_on_punch_area_exited"]
